
2013-09-18  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/graprof.c: changed invokation style to allow one-line
	profiling

2013-09-15  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/graprof.c: tweaked top level workflow in main

2013-09-04  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/callgraph.c: added value description to call graph

2013-09-03  Andreas Grapentin  <andreas@grapentin.org>

	* libgraprof/mallhooks.c: restored deprecated malloc_hook
	functionality, enabled/disabled by defining
	USE_DEPRECATED_MALLOC_HOOKS to 1 or 0

2013-08-30  Andreas Grapentin  <andreas@grapentin.org>

	* libgraprof/libgraprof.c: minor change to const char* errors
	* libgraprof/highrestimer.c: replaced feedback_warning call with
	perror, effectively removing the grapes dependency of libgraprof

2013-08-27  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/function.c: added total function count incremented in
	function_enter, and added accessor function definition
	* graprof/function.h: added declaration
	* graprof/callgraph.c: added print for total function calls
	* graprof/flatprofile.c: added print for total function calls

	* graprof/function.c: added explicit memory deallocation routine
	* graprof/memory.c: likewise, fixed memory leak in memory_free

2013-08-26  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/flatprofile.c: fixed profile header and description
	* graprof/flatprofile.c: if call graph and flat profile are enabled,
	print function ids in flat profile

	* graprof/memory.c: fixed allocation tracking bug if already freed
	locations are allocated again
	* graprof/memprofile.c: removed distinction between invalid ptr and
	double free

	* graprof/flatprofile.h: added parameter to tell flatprofile_print to
	enable function id printing
	* graprof/flatprofile.c: implemented the behaviour of this parameter
	* graprof/graprof.c: changed call to flatprofile_print accordingly

2013-08-25  Andreas Grapentin  <andreas@grapentin.org>
